# django-admin-site-search

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  requirements.txt  setup.cfg  tox.ini
.github/workflows/: lint.yaml  pypi.yaml  test.yaml
admin_site_search/: apps.py  views.py
admin_site_search/static/admin_site_search/: alpine.js  search.js  style.css
admin_site_search/static/admin_site_search/alpinejs/: 3-12-0.min.js  focus-3-12-0.min.js
admin_site_search/static/search/: style.css
admin_site_search/templates/admin_site_search/: button.html  head.html  icon.html  input.html  modal.html  results.html  spinner.html
admin_site_search/templates/search/: button.html  head.html  modal.html
dev/: README.md  admin.py  asgi.py  settings.py  wsgi.py
dev/apps/app_one/: apps.py
dev/apps/app_two/: apps.py
dev/football/core/: admin.py  apps.py  factories.py  models.py
dev/football/core/management/commands/: testdata.py
dev/football/players/: admin.py  apps.py  enums.py  factories.py  models.py
dev/football/players/migrations/: 0001_initial.py  0002_initial.py
dev/football/stadiums/: admin.py  apps.py  enums.py  factories.py  models.py
dev/football/stadiums/migrations/: 0001_initial.py
dev/football/teams/: admin.py  apps.py  enums.py  factories.py  models.py
dev/football/teams/migrations/: 0001_initial.py
dev/templates/admin/: base_site.html
search/: apps.py  views.py
search/static/search/: alpine.js  style.css
search/templates/search/: button.html  input.html  results.html
tests/: __init__.py  conftest.py  pytest.ini  test_api.py  test_search.py  test_templates.py
tests/browser/: conftest.py  test_playwright.py
tests/server/: conftest.py  test_api.py  test_auth.py  test_override.py  test_search.py  test_templates.py
tests/server/test_url/: test_path.py  urls_custom.py  urls_default.py  urls_index.py
