[metadata]
name = django-admin-site-search
version = 0.1.0
description = A search (cmd+k) modal, for the Django admin UI, that searches your entire site.
long_description = file: README.md
url = https://github.com/ahmedaljawahiry/django-admin-site-search/
author = Ahmed Al-Jawahiry
author_email = ahmedaljawahiry@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >= 3.8
install_requires = django >= 4.0