[metadata]
name = django-admin-site-search
version = 1.1.0
description = A search (cmd+k) modal, for the Django admin UI, that searches your entire site.
long_description = file: README.md
long_description_content_type = text/markdown
readme = "README.md"
url = https://github.com/ahmedaljawahiry/django-admin-site-search/
author = Ahmed Al-Jawahiry
author_email = ahmedaljawahiry@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Framework :: Django :: 5.0
    Framework :: Django :: 5.1
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
keywords = Django
project_urls =
    Maintainer = https://ahmedaljawahiry.com

[options]
include_package_data = true
packages = find:
python_requires = >= 3.7
install_requires = django >= 3.2